--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ script:
 - ls -l
 - sudo apt-get install xa65
 - sudo apt-get install libgtk-3-dev
+- sudo apt-get install libglew-dev
 - ./autogen.sh
 - ./configure --enable-native-gtk3ui
 - make
