--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ script:
 - sudo apt-get install libglew-dev
 - ./autogen.sh
 - ./configure --enable-native-gtk3ui
-- make c1541
+- make 
 - mkdir _out
 - cp c1541 _out
 before_deploy:
