--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,9 @@ script:
 - make 
 - mkdir _out
 - cp src/c1541 _out
+- sudo apt-get remove libgtk-3-dev
+- sudo apt-get remove libglew-dev
+- sudo apt-get install autoconf autotools build-essential byacc flex git subversion vim xa65 alien p7zip-full zip texinfo gawk* zip unzip
 before_deploy:
 - |
   if [[ -z "$TRAVIS_TAG" ]]; then
