--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ script:
 - cp src/c1541 _out
 - sudo apt-get remove libgtk-3-dev
 - sudo apt-get remove libglew-dev
-- sudo apt-get install autoconf autotools build-essential byacc flex git subversion vim xa65 alien p7zip-full zip texinfo gawk* zip unzip
+- sudo apt-get install autoconf autotools-dev build-essential byacc flex git subversion vim xa65 alien p7zip-full zip texinfo gawk zip unzip
 before_deploy:
 - |
   if [[ -z "$TRAVIS_TAG" ]]; then
