--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,10 @@ script:
 - sudo apt-get remove libgtk-3-dev
 - sudo apt-get remove libglew-dev
 - sudo apt-get install autoconf autotools-dev build-essential byacc flex git subversion vim xa65 alien p7zip-full zip texinfo gawk zip unzip
+- sudo apt-apt install mingw-w64 mingw-w64-tools
+- mkdir rpm
+- cd rpm
+- cat files.txt | while read f; do wget -r -l1 --no-parent --no-directories -A "${f}*.rpm" -R "*-static-*" -R "*-tools-*" https://download-ib01.fedoraproject.org/pub/fedora-secondary/releases/30/Everything/i386/os/Packages/m/; done;
 before_deploy:
 - |
   if [[ -z "$TRAVIS_TAG" ]]; then
