--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ script:
 - mkdir rpm
 - cd rpm
 - wget -r -l1 --no-parent --no-directories -A "mingw64-adwaita-icon-theme.rpm" -R "*-static-*" -R "*-tools-*" https://download-ib01.fedoraproject.org/pub/fedora-secondary/releases/30/Everything/i386/os/Packages/m/
-- cat files.txt | while read f; do wget -r -l1 --no-parent --no-directories -A "${f}*.rpm" -R "*-static-*" -R "*-tools-*" https://rpmfind.net/linux/fedora/linux/development/rawhide/Everything/x86_64/os/Packages/m; done;
+- cat files.txt | while read f; do wget -r -l1 --no-parent --no-directories -A "${f}*.rpm" -R "*-static-*" -R "*-tools-*" "https://rpmfind.net/linux/fedora/linux/development/rawhide/Everything/x86_64/os/Packages/m"; done;
 
 before_deploy:
 - |
