More travis fixes.

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,11 +32,12 @@ script:
 - sudo cp -R /usr/x86_64-w64-mingw32/sys-root/mingw/* /usr/x86_64-w64-mingw32/
 - sudo cd /usr/x86_64-w64-mingw32/lib/pkgconfig
 - for pc in /usr/x86_64-w64-mingw32/lib/pkgconfig/*.pc; do echo "$pc"; sudo cp "$pc" "$pc.bak"; sudo sed -i 's@/sys-root/mingw@@' "$pc"; done
-- sudo sh ln -s /usr/lib/x86_64-linux-gnu/glib-2.0/glib-compile-resources /usr/bin/glib-compile-resources
-- sudo sh ln -s /usr/lib/x86_64-linux-gnu/glib-2.0/glib-compile-schemas /usr/bin/glib-compile-schemas
-- sudo sh ln -s /usr/x86_64-w64-mingw32/bin/glib-genmarshal /usr/bin/glib-genmarshal
-- sudo sh ln -s /usr/x86_64-w64-mingw32/bin/glib-mkenums /usr/bin/glib-mkenums
+- sudo ln -s /usr/lib/x86_64-linux-gnu/glib-2.0/glib-compile-resources /usr/bin/glib-compile-resources
+- sudo ln -s /usr/lib/x86_64-linux-gnu/glib-2.0/glib-compile-schemas /usr/bin/glib-compile-schemas
+- sudo ln -s /usr/x86_64-w64-mingw32/bin/glib-genmarshal /usr/bin/glib-genmarshal
+- sudo ln -s /usr/x86_64-w64-mingw32/bin/glib-mkenums /usr/bin/glib-mkenums
 - sudo glib-compile-schemas /usr/x86_64-w64-mingw32/share/glib-2.0/schemas/.
+- cd ..
 - ./autogen.sh
 - cd ..
 - mkdir gtk3-win64-build
