--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ script:
 - cp src/c1541 _out
 - sudo apt-get remove libgtk-3-dev
 - sudo apt-get remove libglew-dev
+- make distclean
 - sudo apt-get install autoconf autotools-dev build-essential byacc flex git subversion vim xa65 alien p7zip-full zip texinfo gawk zip unzip
 - sudo apt-apt install mingw-w64 mingw-w64-tools
 - mkdir rpm
