--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,7 @@ script:
 - for f in ../rpm/*.rpm; do sudo alien --scripts --to-deb --bump 0 $f; done
 - for f in *.deb; do sudo dpkg -i $f; done
 - sudo cp -R /usr/x86_64-w64-mingw32/sys-root/mingw/* /usr/x86_64-w64-mingw32/
+- ls -l /usr/x86_64-w64-mingw32/
 - sudo cd /usr/x86_64-w64-mingw32/lib/pkgconfig
 - for pc in /usr/x86_64-w64-mingw32/lib/pkgconfig/*.pc; do echo "$pc"; sudo cp "$pc" "$pc.bak"; sudo sed -i 's@/sys-root/mingw@@' "$pc"; done
 - sudo ln -s /usr/lib/x86_64-linux-gnu/glib-2.0/glib-compile-resources /usr/bin/glib-compile-resources
@@ -43,7 +44,7 @@ script:
 - cd ..
 - mkdir gtk3-win64-build
 - cd gtk3-win64-build
-- ../vice/configure --enable-headlessui --host=x86_64-w64-mingw32
+- ../vice/configure --enable-native-gtk3ui --host=x86_64-w64-mingw32
 - make
 before_deploy:
 - |
